refactor, migrate to lucene 10.x, bugfixes